baml_language/crates/baml_tests/snapshots/compiles/patterns_class_destructure_namespaces/baml_tests__compiles__patterns_class_destructure_namespaces__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.DeepGenericDestructureNamespaceQualifiedLet() -> int  [expr] {
  { let outer: llm.openai.Outer = _ { inner: _ { value: "done" } }; let llm.openai.Outer { inner: llm.openai.Box { value: value } }: llm.openai.Outer = outer } value.length()
}
function user.DeepGenericDestructureQualifiedLet() -> int  [expr] {
  { let outer: root.llm.openai.Outer = _ { inner: _ { value: 52 } }; let root.llm.openai.Outer { inner: root.llm.openai.Box { value: value } }: root.llm.openai.Outer = outer } value
}
function user.DestructureNamespaceQualifiedLet() -> int  [expr] {
  { let response = llm.openai.Response { text: "ok", score: 45 }; let llm.openai.Response { score: score }: llm.openai.Response = response } score
}
function user.DestructureNamespaceQualifiedMatch() -> int  [expr] {
  { let response = llm.openai.Response { text: "ok", score: 46 } } match (response) { llm.openai.Response { score: 0 } => 0, llm.openai.Response { score: matched }: llm.openai.Response => matched }
}
function user.DestructureQualifiedLet() -> int  [expr] {
  { let response = root.llm.openai.Response { text: "ok", score: 41 }; let root.llm.openai.Response { score: score }: root.llm.openai.Response = response } score
}
function user.DestructureQualifiedMatch() -> int  [expr] {
  { let response = root.llm.openai.Response { text: "ok", score: 42 } } match (response) { root.llm.openai.Response { score: 0 } => 0, root.llm.openai.Response { score: matched }: root.llm.openai.Response => matched }
}
function user.GenericDestructureNamespaceQualifiedLet() -> int  [expr] {
  { let boxed: llm.openai.Box = _ { value: "ok" }; let llm.openai.Box { value: value }: llm.openai.Box = boxed } value.length()
}
function user.GenericDestructureQualifiedLet() -> int  [expr] {
  { let boxed: root.llm.openai.Box = _ { value: 49 }; let root.llm.openai.Box { value: value }: root.llm.openai.Box = boxed } value
}
function user.GenericTypePatternNamespaceQualifiedMatch() -> int  [expr] {
  { let boxed: llm.openai.Box | llm.openai.Box = _ { value: "ready" } } match (boxed) { llm.openai.Box => 0, llm.openai.Box => 51 }
}
function user.GenericTypePatternQualifiedMatch() -> int  [expr] {
  { let boxed: root.llm.openai.Box | root.llm.openai.Box = _ { value: 50 } } match (boxed) { root.llm.openai.Box => 0, root.llm.openai.Box => 50 }
}
function user.TypePatternNamespaceQualifiedLet() -> int  [expr] {
  { let response: llm.openai.Response = llm.openai.Response { text: "ok", score: 47 } } response.score
}
function user.TypePatternNamespaceQualifiedMatch() -> int  [expr] {
  { let response = llm.openai.Response { text: "ok", score: 48 } } match (response) { llm.openai.Response => response.score }
}
function user.TypePatternQualifiedLet() -> int  [expr] {
  { let response: root.llm.openai.Response = root.llm.openai.Response { text: "ok", score: 43 } } response.score
}
function user.TypePatternQualifiedMatch() -> int  [expr] {
  { let response = root.llm.openai.Response { text: "ok", score: 44 } } match (response) { root.llm.openai.Response => response.score }
}
class user.llm.openai.Box {
  value: user.llm.openai.T
}
class user.llm.openai.Outer {
  inner: user.llm.openai.Box
}
class user.llm.openai.Response {
  text: string
  score: int
}
function user.llm.openai.DestructureBareInNamespace(response: user.llm.openai.Response) -> int  [expr] {
  { let Response { score: score } = response } score
}
