baml_language/crates/baml_tests/snapshots/compiles/patterns_class_destructure_namespaces/baml_tests__compiles__patterns_class_destructure_namespaces__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.DeepGenericDestructureNamespaceQualifiedLet() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Outer<string> // outer
    let _2: llm.openai.Box<string>
    let _3: llm.openai.Outer<string>
    let _4: llm.openai.Box<string>
    let _5: string
    let _6: string // value

    bb0: {
        _2 = user.llm.openai.Box<Concrete(String { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } })> { const "done" };
        _1 = user.llm.openai.Outer<Concrete(String { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } })> { copy _2 };
        _3 = copy _1;
        _4 = copy _3.0;
        _5 = copy _4.0;
        _6 = copy _5;
        _0 = call const fn baml.String.length(copy _6) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.DeepGenericDestructureQualifiedLet() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Outer<int> // outer
    let _2: llm.openai.Box<int>
    let _3: llm.openai.Outer<int>
    let _4: llm.openai.Box<int>
    let _5: int
    let _6: int // value

    bb0: {
        _2 = user.llm.openai.Box<Concrete(Int { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } })> { const 52_i64 };
        _1 = user.llm.openai.Outer<Concrete(Int { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } })> { copy _2 };
        _3 = copy _1;
        _4 = copy _3.0;
        _5 = copy _4.0;
        _6 = copy _5;
        _0 = copy _6;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.DestructureNamespaceQualifiedLet() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Response // response
    let _2: llm.openai.Response
    let _3: int
    let _4: int // score

    bb0: {
        _1 = user.llm.openai.Response { const "ok", const 45_i64 };
        _2 = copy _1;
        _3 = copy _2.1;
        _4 = copy _3;
        _0 = copy _4;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.DestructureNamespaceQualifiedMatch() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Response // response
    let _2: bool
    let _3: int
    let _4: bool
    let _5: int
    let _6: int // matched

    bb0: {
        _1 = user.llm.openai.Response { const "ok", const 46_i64 };
        _2 = is_type(copy _1, llm.openai.Response);
        branch copy _2 -> [bb1, bb2];
    }

    bb1: {
        _3 = copy _1.1;
        _4 = copy _3 == const 0_i64;
        branch copy _4 -> [bb3, bb2];
    }

    bb2: {
        _5 = copy _1.1;
        _6 = copy _5;
        _0 = copy _6;
        goto -> bb4;
    }

    bb3: {
        _0 = const 0_i64;
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn user.DestructureQualifiedLet() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Response // response
    let _2: llm.openai.Response
    let _3: int
    let _4: int // score

    bb0: {
        _1 = user.llm.openai.Response { const "ok", const 41_i64 };
        _2 = copy _1;
        _3 = copy _2.1;
        _4 = copy _3;
        _0 = copy _4;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.DestructureQualifiedMatch() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Response // response
    let _2: bool
    let _3: int
    let _4: bool
    let _5: int
    let _6: int // matched

    bb0: {
        _1 = user.llm.openai.Response { const "ok", const 42_i64 };
        _2 = is_type(copy _1, llm.openai.Response);
        branch copy _2 -> [bb1, bb2];
    }

    bb1: {
        _3 = copy _1.1;
        _4 = copy _3 == const 0_i64;
        branch copy _4 -> [bb3, bb2];
    }

    bb2: {
        _5 = copy _1.1;
        _6 = copy _5;
        _0 = copy _6;
        goto -> bb4;
    }

    bb3: {
        _0 = const 0_i64;
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn user.GenericDestructureNamespaceQualifiedLet() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Box<string> // boxed
    let _2: llm.openai.Box<string>
    let _3: string
    let _4: string // value

    bb0: {
        _1 = user.llm.openai.Box<Concrete(String { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } })> { const "ok" };
        _2 = copy _1;
        _3 = copy _2.0;
        _4 = copy _3;
        _0 = call const fn baml.String.length(copy _4) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.GenericDestructureQualifiedLet() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Box<int> // boxed
    let _2: llm.openai.Box<int>
    let _3: int
    let _4: int // value

    bb0: {
        _1 = user.llm.openai.Box<Concrete(Int { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } })> { const 49_i64 };
        _2 = copy _1;
        _3 = copy _2.0;
        _4 = copy _3;
        _0 = copy _4;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.GenericTypePatternNamespaceQualifiedMatch() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Box<int> | llm.openai.Box<string> // boxed
    let _2: bool
    let _3: int
    let _4: bool

    bb0: {
        _1 =  { const "ready" };
        _2 = is_type(copy _1, llm.openai.Box<int>);
        branch copy _2 -> [bb1, bb2];
    }

    bb1: {
        _3 = copy _1.0;
        _4 = is_type(copy _3, int);
        branch copy _4 -> [bb3, bb2];
    }

    bb2: {
        _0 = const 51_i64;
        goto -> bb4;
    }

    bb3: {
        _0 = const 0_i64;
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn user.GenericTypePatternQualifiedMatch() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Box<int> | llm.openai.Box<string> // boxed
    let _2: bool
    let _3: string
    let _4: bool

    bb0: {
        _1 =  { const 50_i64 };
        _2 = is_type(copy _1, llm.openai.Box<string>);
        branch copy _2 -> [bb1, bb2];
    }

    bb1: {
        _3 = copy _1.0;
        _4 = is_type(copy _3, string);
        branch copy _4 -> [bb3, bb2];
    }

    bb2: {
        _0 = const 50_i64;
        goto -> bb4;
    }

    bb3: {
        _0 = const 0_i64;
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn user.TypePatternNamespaceQualifiedLet() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Response // response

    bb0: {
        _1 = user.llm.openai.Response { const "ok", const 47_i64 };
        _0 = copy _1.1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.TypePatternNamespaceQualifiedMatch() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Response // response

    bb0: {
        _1 = user.llm.openai.Response { const "ok", const 48_i64 };
        _0 = copy _1.1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.TypePatternQualifiedLet() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Response // response

    bb0: {
        _1 = user.llm.openai.Response { const "ok", const 43_i64 };
        _0 = copy _1.1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.TypePatternQualifiedMatch() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Response // response

    bb0: {
        _1 = user.llm.openai.Response { const "ok", const 44_i64 };
        _0 = copy _1.1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.llm.openai.DestructureBareInNamespace(response: llm.openai.Response) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: llm.openai.Response // response // param
    let _2: llm.openai.Response
    let _3: int
    let _4: int // score

    bb0: {
        _2 = copy _1;
        _3 = copy _2.1;
        _4 = copy _3;
        _0 = copy _4;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
