baml_language/crates/baml_tests/snapshots/compiles/patterns_class_destructure_namespaces/baml_tests__compiles__patterns_class_destructure_namespaces__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.DestructureQualifiedLet() -> int throws never {
  { : int
    let response = root.llm.openai.Response { text: "ok", score: 41 } : user.llm.openai.Response
    let root.llm.openai.Response { score: score }: root.llm.openai.Response = response : user.llm.openai.Response
    score : int
  }
}
function user.DestructureQualifiedMatch() -> int throws never {
  { : 0 | int
    let response = root.llm.openai.Response { text: "ok", score: 42 } : user.llm.openai.Response
    match (response : user.llm.openai.Response) : 0 | int
      root.llm.openai.Response { score: 0 } =>
        0 : 0
      root.llm.openai.Response { score: matched }: root.llm.openai.Response =>
        matched : int
  }
}
function user.DestructureNamespaceQualifiedLet() -> int throws never {
  { : int
    let response = llm.openai.Response { text: "ok", score: 45 } : user.llm.openai.Response
    let llm.openai.Response { score: score }: llm.openai.Response = response : user.llm.openai.Response
    score : int
  }
}
function user.DestructureNamespaceQualifiedMatch() -> int throws never {
  { : 0 | int
    let response = llm.openai.Response { text: "ok", score: 46 } : user.llm.openai.Response
    match (response : user.llm.openai.Response) : 0 | int
      llm.openai.Response { score: 0 } =>
        0 : 0
      llm.openai.Response { score: matched }: llm.openai.Response =>
        matched : int
  }
}
function user.TypePatternQualifiedLet() -> int throws never {
  { : int
    let response: root.llm.openai.Response = root.llm.openai.Response { text: "ok", score: 43 } : user.llm.openai.Response
    response.score : int
  }
}
function user.TypePatternQualifiedMatch() -> int throws never {
  { : int
    let response = root.llm.openai.Response { text: "ok", score: 44 } : user.llm.openai.Response
    match (response : user.llm.openai.Response) : int
      root.llm.openai.Response =>
        response.score : int
  }
}
function user.TypePatternNamespaceQualifiedLet() -> int throws never {
  { : int
    let response: llm.openai.Response = llm.openai.Response { text: "ok", score: 47 } : user.llm.openai.Response
    response.score : int
  }
}
function user.TypePatternNamespaceQualifiedMatch() -> int throws never {
  { : int
    let response = llm.openai.Response { text: "ok", score: 48 } : user.llm.openai.Response
    match (response : user.llm.openai.Response) : int
      llm.openai.Response =>
        response.score : int
  }
}
function user.GenericDestructureQualifiedLet() -> int throws never {
  { : int
    let boxed: root.llm.openai.Box<int> = _ { value: 49 } : user.llm.openai.Box<int>
    let root.llm.openai.Box { value: value }: root.llm.openai.Box<int> = boxed : user.llm.openai.Box<int>
    value : int
  }
}
function user.GenericDestructureNamespaceQualifiedLet() -> int throws never {
  { : int
    let boxed: llm.openai.Box<string> = _ { value: "ok" } : user.llm.openai.Box<string>
    let llm.openai.Box { value: value }: llm.openai.Box<string> = boxed : user.llm.openai.Box<string>
    value.length() : int
  }
}
function user.GenericTypePatternQualifiedMatch() -> int throws never {
  { : 0 | 50
    let boxed: root.llm.openai.Box<int> | root.llm.openai.Box<string> = _ { value: 50 } : unknown -> user.llm.openai.Box<int> | user.llm.openai.Box<string>
    match (boxed : user.llm.openai.Box<int> | user.llm.openai.Box<string>) : 0 | 50
      root.llm.openai.Box<string> =>
        0 : 0
      root.llm.openai.Box<int> =>
        50 : 50
  }
}
function user.GenericTypePatternNamespaceQualifiedMatch() -> int throws never {
  { : 0 | 51
    let boxed: llm.openai.Box<int> | llm.openai.Box<string> = _ { value: "ready" } : unknown -> user.llm.openai.Box<int> | user.llm.openai.Box<string>
    match (boxed : user.llm.openai.Box<int> | user.llm.openai.Box<string>) : 0 | 51
      llm.openai.Box<int> =>
        0 : 0
      llm.openai.Box<string> =>
        51 : 51
  }
}
function user.DeepGenericDestructureQualifiedLet() -> int throws never {
  { : int
    let outer: root.llm.openai.Outer<int> = _ { inner: _ { value: 52 } } : user.llm.openai.Outer<int>
    let root.llm.openai.Outer { inner: root.llm.openai.Box { value: value } }: root.llm.openai.Outer<int> = outer : user.llm.openai.Outer<int>
    value : int
  }
}
function user.DeepGenericDestructureNamespaceQualifiedLet() -> int throws never {
  { : int
    let outer: llm.openai.Outer<string> = _ { inner: _ { value: "done" } } : user.llm.openai.Outer<string>
    let llm.openai.Outer { inner: llm.openai.Box { value: value } }: llm.openai.Outer<string> = outer : user.llm.openai.Outer<string>
    value.length() : int
  }
}
class user.llm.openai.Response {
  text: string
  score: int
}
class user.llm.openai.Box {
  value: T
}
class user.llm.openai.Outer {
  inner: user.llm.openai.Box<T>
}
function user.llm.openai.DestructureBareInNamespace(response: user.llm.openai.Response) -> int throws never {
  { : int
    let Response { score: score } = response : user.llm.openai.Response
    score : int
  }
}
class user.llm.openai.Response$stream {
  text: null | string
  score: null | int
}
class user.llm.openai.Box$stream {
  value: null | T
}
class user.llm.openai.Outer$stream {
  inner: null | user.llm.openai.Box$stream<T>
}
